<resources>
    <string name="app_name">WenFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="s_title">Title</string>

    <!--  Login  -->
    <string name="s_login_title">LOG IN</string>

    <!--  Register  -->
    <string name="s_register_title">SIGN UP</string>
    <string name="s_login">登入</string>
    <string name="s_register">註冊</string>
    <string name="s_google_btn">使用Google繼續</string>
    <string name="s_or">或</string>
    <string name="s_password_confrim">passwordConfrim</string>
    <string name="s_email_input_null_erro">電子郵件(必填)</string>
    <string name="s_email_input_type_erro">無效的電子郵件</string>
    <string name="s_password_input_null_erro">密碼(必填)</string>
    <string name="s_password_input_type_erro">密碼格式錯誤</string>
    <string name="s_password_confrim_input_null_erro">密碼確認(必填)</string>
    <string name="s_password_confrim_input_inconsistent_erro">與輸入密碼不相符合</string>
    <string name="s_input_null_error">請填寫所有欄位,並符合規範。</string>
    <string name="s_check_email_title">查看您的電子郵件收件箱</string>
    <string name="s_check_email_msg">請驗證您的電子郵件地址。我們已將包含6位數代碼的電子郵件發送到gorillaz1801058@gmai.com 此代碼將在15分鐘後失效。請在下面輸入。</string>
    <string name="s_check_email_msg_second">此代碼將在15分鐘後失效。請在下面輸入。</string>
    <string name="s_check_email_hint">仍未收到電子郵件?請檢查你的垃圾郵件資料夾。</string>
    <string name="s_re_send_email">重發郵件。</string>


    <!--  NavigationBottomView  -->
    <string name="s_navigation_title_home">首頁</string>
    <string name="s_navigation_title_shop">選購</string>
    <string name="s_navigation_title_account">我的</string>
    <string name="s_navigation_title_shopping_cart">購物車</string>
    <string name="s_shop_title">Shop</string>


    <!-- titleBar   -->
    <string name="bar_string_placeholder">""</string>
    <string name="s_search">搜尋</string>

    <!-- banner   -->
    <string name="indicator_color_error">指示器的颜色只能设置成“@color/colorID or #000000”</string>
    <string name="banner_adapter_null_error">Adapter为空！请检查下参数</string>
    <string name="s_email_code_null_error">請輸入6位數驗證碼,謝謝</string>
    <string name="s_s_resend_email_code_success">驗證碼已寄至信箱,請查看並驗證,謝謝</string>
    <string name="title_activity_header_footer">HeaderFooterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="s_you_may_also_like">猜你喜歡</string>

</resources>