<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_default"
        android:title="@string/s_navigation_title_home" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/icon_shop_default"
        android:title="@string/s_navigation_title_shop" />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/icon_shopping_car_default"
        android:title="@string/s_navigation_title_shopping_cart" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/icon_account_default"
        android:title="@string/s_navigation_title_account" />



</menu>