<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.email_code.EmailCodeFragment">


        <LinearLayout
            android:id="@+id/linTitleBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintWidth_percent="0.9"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_check_email_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_check_email_msg"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />


            </LinearLayout>



        </LinearLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conPinBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linTitleBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            >

<!--            <com.chaos.view.PinView-->
<!--                android:id="@+id/pinView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:itemCount="6"-->
<!--                app:itemSpacing="10dp"-->
<!--                app:layout_constraintHorizontal_bias="0.3"-->
<!--                app:viewType="rectangle"-->
<!--                app:itemRadius="10dp"-->
<!--                android:inputType="phone"-->
<!--                />-->

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="Hint."
                android:inputType="number"
                android:textColor="@color/color_secondary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/color_secondary"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="10dp"
                app:itemWidth="48dp"
                app:lineColor="@color/black"
                app:lineWidth="2dp"
                app:viewType="rectangle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/conPinBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_primary_variant"
            android:text="註冊驗證"
            />


        <LinearLayout
            android:id="@+id/linHintBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:layout_constraintWidth_percent="0.9"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_check_email_hint"
                android:textColor="@color/black"
                android:textSize="14sp"
                />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvReSendEamil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_re_send_email"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    />





        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>